Fix Vitrage title and description
Change-Id: Ice62ae4ca4f07508b5d330c35ffe65dc67042cd6

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -469,12 +469,12 @@ tabs:
             since: Newton
 
           - name: vitrage
-            title: RCA (Root Cause Analysis service)
+            title: Root Cause Analysis service
             desc: >
-              Vitrage is the OpenStack RCA (Root Cause Analysis) service for
-              organizing, analyzing and expanding OpenStack alarms & events,
-              yielding insights regarding the root cause of problems and
-              deducing their existence before they are directly detected.
+              Vitrage is the OpenStack service for Root Cause Analysis.
+              It is used to organize, analyze and visualize OpenStack alarms &
+              events, yield insights regarding the root cause of problems and
+              deduce their existence before they are directly detected.
             project-team: vitrage
             since: Newton
 
