--- a/sdks.yaml
+++ b/sdks.yaml
@@ -14,36 +14,39 @@ tabs:
 
           - name: openstackclient
             title: Command-line interface for all OpenStack services
+            docs-title: Docs
+            docs-url: https://docs.openstack.org/python-openstackclient/latest/
+            download-title: Download
+            download-url: https://pypi.org/project/python-openstackclient/
             desc: >
               Single command-line interface for OpenStack services with a
               uniform command set and format.
             project-team: OpenStackClient
-            links:
-              - Download: https://pypi.org/project/python-openstackclient/
-              - Docs: https://docs.openstack.org/python-openstackclient/latest/
 
           - name: shade
             title: Client library for interacting with OpenStack clouds
+            docs-title: Docs
+            docs-url: https://docs.openstack.org/shade/latest/
+            download-title: Download
+            download-url: https://pypi.org/project/shade/
             desc: >
               shade is a simple client library for interacting with OpenStack clouds.
               The key word here is simple. Clouds can do many many many things -
               but there are probably only about 10 of them that most people care about
               with any regularity.
             project-team: Shade
-            links:
-              - Download: https://pypi.org/project/shade/
-              - Docs: https://docs.openstack.org/shade/latest/
 
       - category: Python SDKs
         components:
 
           - name: openstacksdk
             title: Official Python SDK for OpenStack APIs
+            docs-title: Docs
+            docs-url: https://docs.openstack.org/openstacksdk/latest/
+            download-title: Download
+            download-url: https://pypi.org/project/openstacksdk/
             desc: >
               Multi-cloud aware Python SDK for the OpenStack REST API
               exposing both the full set of low-level APIs as well as
               curated higher level business logic.
             project-team: OpenStackSDK
-            links:
-              - Download: https://pypi.org/project/openstacksdk/
-              - Docs: https://docs.openstack.org/openstacksdk/latest/
