Add depends-on and see-also tags for Octavia
Change-Id: I2da86f39ab5cb7d11627ecc2650e538089f7c65c

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -185,6 +185,14 @@ tabs:
                 what's new in the latest OpenStack release, and what you can
                 expect to see from the project in the upcoming release.
               title: Octavia - Project Update
+            dependencies:
+              - glance
+              - keystone
+              - neutron
+              - nova
+            see-also:
+              - barbican
+              - horizon
 
           - name: designate
             title: DNS service
