Add I18n and Documentation support team to Horizon
Change-Id: I34377b86c11a650b0867b3b56172e16314a89652

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -547,6 +547,9 @@ tabs:
                 what's new in the latest OpenStack release, and what you can
                 expect to see from the project in the upcoming release.
               title: Horizon - Project Update
+            support-teams:
+              - i18n
+              - docs
 
   - name: Operations services
     map-bucket: openstack-operations
