Add I18n and Documentation support team to Horizon
Change-Id: I34377b86c11a650b0867b3b56172e16314a89652

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -469,6 +469,9 @@ tabs:
               OpenStack services.
             project-team: horizon
             since: Essex
+            support-teams:
+              - i18n
+              - docs
 
   - name: Operations services
     map-bucket: openstack-operations
