--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -590,6 +590,14 @@ tabs:
               and notification engine.
             project-team: monasca
             since: Mitaka
+            video:
+              id: uvsriaxA6B0
+              desc: >
+                Project Updates cover the latest changes in the project. See
+                what's new in the latest OpenStack release, and what you can
+                expect to see from the project in the upcoming release.
+              title: Monasca - OpenStack Monitoring - Project Update
+
 
       - category: Optimization/policy tools
         components:
