--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -239,7 +239,7 @@ tabs:
                 Project Updates cover the latest changes in the project. See
                 what's new in the latest OpenStack release, and what you can
                 expect to see from the project in the upcoming release.
-              title: openstack-helm - Project Update
+              title: glance - Project Update
 
           - name: barbican
             title: Key management
