Add dependencies for Sahara
Both strong dependencies (depends-on) and soft ones (see-also).

Change-Id: Id3881ecfb56d5223f8e0ab9d8d54bab028b9a1a6

--- a/openstack_components.yaml
+++ b/openstack_components.yaml
@@ -421,6 +421,19 @@ tabs:
               topology, node hardware details and more.
             project-team: sahara
             since: Juno
+            dependencies:
+              - cinder
+              - keystone
+              - glance
+              - heat
+              - neutron
+              - nova
+            see-also:
+              - barbican
+              - designate
+              - manila
+              - horizon
+              - swift
 
           - name: trove
             title: Database as a Service
