--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,3 +1,7 @@
 - project:
-    templates:
-      - noop-jobs
+    check:
+      jobs:
+        - openstack-tox-validate
+    gate:
+      jobs:
+        - openstack-tox-validate
